Fixed anchor tag word wrap problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,8 @@ a:active {
   color: unset;
 }
 
-a[href*="mailto:"] {
+a[href*="mailto:"],
+a[target="_blank"] {
   word-wrap: anywhere;
 }
 
