--- a/assets/scss/base/_common.scss
+++ b/assets/scss/base/_common.scss
@@ -49,7 +49,8 @@ a:active {
 	color: unset;
 }
 
-a[href*="mailto:"]{
+a[href*="mailto:"],
+a[target="_blank"]{
 	word-wrap: anywhere;
 }
 
